# KalaWindow

./: .gitattributes  .gitignore  .project.kmake.kate-swp  CHANGES.txt  CMakeLists.txt  CMakePresets.json  Linux_prerequisites.txt  README-INPUT.md  README.md  build_all_linux.sh  build_all_windows.bat  build_and_send_windows.bat  build_linux_debug.sh  build_linux_release.sh  build_windows.bat  build_windows_debug.bat  build_windows_release.bat  copy_to_circuit_game.bat  copy_to_kalatestproject.bat  copy_to_kalaview.bat  copy_to_kw.bat  manifest.kmf  mf_linux.kmf  mf_win.kmf  mine_linux.sh  mine_windows.bat  project.kma  project.kmake  readme.md  send_to_testproject.bat  testproj_linux.sh  testproj_windows.bat  version.rc.in  video_linux.sh  video_windows.bat  win32_ideas.md
_external_shared/: copy_dlls.bat  copy_linux.sh  copy_windows.bat
_external_shared/FreeType/: CHANGES.txt  build.sh  build_linux.sh  build_windows.bat
_external_shared/FreeType/debug/: freetyped.lib
_external_shared/FreeType/release/: freetype.lib
_external_shared/KalaHeaders/: README.md  api.hpp  c_helpers.hpp  core_types.hpp  core_utils.hpp  file_utils.hpp  hierarchy_utils.hpp  kala_types.hpp  key_standards.hpp  log_utils.hpp  logging.hpp  math_utils.hpp  string_utils.hpp
_external_shared/KalaUtils/: osutils.hpp  stringutils.hpp
_external_shared/KalaUtils/debug/: KalaUtilsD.lib
_external_shared/KalaUtils/release/: KalaUtils.lib
_external_shared/OpenGL/: CHANGES.txt
_external_shared/Wayland-protocols/: README.md  linux-drm-syncobj-v1-client-protocol.h  linux-drm-syncobj-v1-protocol.c
_external_shared/imgui/: CHANGES.txt  imgui_export.hpp
_external_shared/imgui/backends/: imgui_impl_vulkan.h
debug/: _KalaWindow03d.lib  version.rc
docs/: external_libraries.md  minimum_requirements.md
docs/web_builds/: emscripten.md
include/: enums.hpp  freetype.hpp  graphics.hpp  input.hpp  messageloop.hpp  opengl.hpp  opengl_loader.hpp  opengl_typedefs.hpp  platform.hpp  preprocessors.hpp  shader.hpp  window.hpp
include/core/: audio.hpp  containers.hpp  core.hpp  crash.hpp  enums.hpp  glm_global.hpp  global_handles.hpp  input.hpp  kw_crash.hpp  kw_input.hpp  kw_messageloop_x11.hpp  log.hpp  platform.hpp  registry.hpp
include/graphics/: glyph.hpp  kw_window.hpp  kw_window_global.hpp  render.hpp  texture.hpp  window.hpp  window_global.hpp
include/graphics/opengl/: opengl.hpp  opengl_core.hpp  opengl_functions_core.hpp  opengl_functions_linux.hpp  opengl_functions_win.hpp  opengl_linux.hpp  opengl_loader.hpp  opengl_shader.hpp  opengl_texture.hpp  opengl_typedefs.hpp  opengl_win.hpp  shader_opengl.hpp  texture_opengl.hpp
include/graphics/vulkan/: enums_vulkan.hpp  extensions_vulkan.hpp  shader_vulkan.hpp  texture_vulkan.hpp  vulkan.hpp  vulkan_extensions.hpp  vulkan_layers.hpp
include/internal/: opengl_wayland.hpp  window_wayland.hpp  window_windows.hpp  window_x11.hpp
include/opengl/: kw_opengl.hpp  kw_opengl_functions_core.hpp
include/ui/: debug_ui.hpp  image.hpp  imgui.hpp  quad.hpp  text.hpp  widget.hpp  widgetmanager.hpp
include/vulkan/: kw_vulkan.hpp
release/: _KalaWindow03.lib  version.rc
src/: freetype.cpp  graphics.cpp  input.cpp  messageloop.cpp  opengl.cpp  opengl_loader.cpp  shader.cpp  window.cpp
src/core/: audio.cpp  containers.cpp  core.cpp  global_handles.cpp  input_windows.cpp  kw_core.cpp  kw_crash_linux.cpp  kw_crash_windows.cpp  kw_input.cpp  kw_input_windows.cpp  kw_messageloop_windows.cpp  kw_messageloop_x11.cpp  log.cpp  messageloop_windows.cpp
src/graphics/: camera.cpp  glyph.cpp  kw_menubar_windows.cpp  kw_window_global.cpp  kw_window_global_windows.cpp  kw_window_global_x11.cpp  kw_window_linux.cpp  kw_window_windows.cpp  kw_window_x11.cpp  menubar.cpp  menubar_windows.cpp  messageloop.cpp  render.cpp  window_global.cpp  window_windows.cpp
src/graphics/opengl/: kw_opengl_functions_core.cpp  kw_opengl_functions_linux.cpp  kw_opengl_functions_windows.cpp  kw_opengl_windows.cpp  opengl.cpp  opengl_core.cpp  opengl_functions.cpp  opengl_functions_core.cpp  opengl_functions_linux.cpp  opengl_functions_win.cpp  opengl_functions_windows.cpp  opengl_loader.cpp  opengl_platform_linux.cpp  opengl_platform_win.cpp  opengl_shader.cpp  opengl_texture.cpp  opengl_windows.cpp  shader_opengl.cpp  texture_opengl.cpp
src/graphics/vulkan/: extensions_vulkan.cpp  shader_vulkan.cpp  texture_vulkan.cpp  vulkan.cpp  vulkan_extensions.cpp  vulkan_shader.cpp
src/linux/: crash_linux.cpp  window_linux.cpp
src/opengl/: kw_opengl_functions_core.cpp  kw_opengl_functions_linux.cpp  kw_opengl_functions_windows.cpp  kw_opengl_linux.cpp  kw_opengl_shader.cpp  kw_opengl_windows.cpp  kw_opengl_x11.cpp
src/ui/: debug_ui.cpp  font.cpp  image.cpp  imgui.cpp  quad.cpp  text.cpp  widget.cpp  widgetmanager.cpp
src/vulkan/: kw_vulkan_windows.cpp  kw_vulkan_x11.cpp
src/wayland/: input_wayland.cpp  messageloop_wayland.cpp  opengl_wayland.cpp  window_wayland.cpp
src/windows/: crash_windows.cpp  input_windows.cpp  menubar.cpp  messageloop.cpp  messageloop_windows.cpp  opengl_windows.cpp  window_global.cpp  window_windows.cpp
src/x11/: input_x11.cpp  messageloop_x11.cpp  opengl_x11.cpp  window_x11.cpp
